Added file upload command execution function

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10657,3 +10657,12 @@ body {
   display: none;
 }
 
+.text-bold {
+  font-weight: bold !important;
+}
+
+#console {
+  max-height: 350px;
+  overflow: auto;
+}
+
