--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,15 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+//@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import "fonts";
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// date range picker
+@import '~daterangepicker';
 
 // Custom
 @import 'custom';
